# ngram-tools

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.sh  common.c  common.h  ngrams.h  readall.c  readme.md  reduce.sh  stream-increment.c  tally-ngrams.c  test.sh  text-to-ngrams.c
fixtures/: sample1.4grams  story2.2grams
scripts/: make-baseline.sh  merge.sh  sum-consecutive.sh  tabinstead.sh
src/: client.rs  common.c  common.h  common.rs  main.rs  ngrams.c  ngrams.h  normalize.rs  org.wordtree.ngrams.varlink  org_wordtree_ngrams.rs  pipeline.rs  readall.c  readall.h  server.rs  tally-lines.c  tally-ngrams.c  text-to-ngrams.c
src/pipeline/: normalize.rs
test/: test-ngrams.c
test/fixtures/: story.txt  story2.2grams  story2.2grams.tallied  story2.txt  story3.2grams  story3.2grams.tallied  story3.txt
