[package]
name = "ngrams"
description = "A fast command-line tool for analyzing ascii text as n-grams, by WordTree Foundation"
version = "0.2.0"
authors = ["Duane Johnson <duane.johnson@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
gumdrop = "0.6"
# Need grep-cli for its fast, block-based stdout (as opposed to buffered line-based)
grep-cli = "0.1"
# And termcolor is required by grep-cli
termcolor = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
varlink = "8.1"

[build-dependencies]
varlink_generator = "8.0"